--- a/html檔/Home copy 3.html
+++ b/html檔/Home copy 3.html
@@ -175,7 +175,7 @@
             font-optical-sizing: auto;
             font-weight: 483;
             font-style: normal;
-            font-size: 110%;
+            font-size: 130%;
         }
 
         nav li:hover {
@@ -191,6 +191,56 @@
             opacity: 1;
         }
 
+        /* 下拉選單基礎樣式 */
+        .dropdown {
+            position: relative;
+        }
+
+        .dropdown-menu {
+            display: none;
+            /* 預設隱藏 */
+            position: absolute;
+            top: 100%;
+            /* 放在母項目下方 */
+            right: 0;
+            /* 與母項目右對齊 */
+            background-color: rgba(173, 179, 179, 0.9);
+            border: 1px solid rgba(130, 134, 134, 0.9);
+            border-radius: 3px;
+            list-style: none;
+            padding: 10px 0;
+            margin: 0;
+            width: 200px;
+            /* 下拉選單寬度 */
+            z-index: 60;
+        }
+
+        .dropdown-menu li {
+            text-align: right;
+            padding: 10px 20px;
+            font-size: 100%;
+        }
+
+        .dropdown-menu li:hover {
+            background-color: #ccc;
+            /* 懸停效果 */
+            color: #000;
+        }
+
+        .dropdown-menu li a {
+            text-decoration: none;
+            /* 移除下劃線 */
+            color: inherit;
+            /* 繼承文字顏色 */
+            display: block;
+        }
+
+        /* 顯示下拉選單 */
+        .dropdown.active .dropdown-menu {
+            display: block;
+        }
+
+        /* nav按鈕 */
         #btnbox {
             position: fixed;
             top: 20px;
@@ -344,13 +394,13 @@
         .s8p1 {
             position: absolute;
             top: 5%;
-            left: 61%;
+            left: 59%;
         }
 
         .s8p2 {
             position: absolute;
             top: 20%;
-            left: 34%;
+            left: 32%;
         }
 
         .s8p3 {
@@ -382,7 +432,7 @@
         .text.right {
             top: 0%;
             /* 距離頂部 10% */
-            right: 6%;
+            right: 9%;
             /* 距離右邊 10% */
             gap: 20px;
         }
@@ -390,7 +440,7 @@
         .text.left {
             top: 6%;
             /* 距離頂部 10% */
-            right: 10%;
+            right: 13%;
             /* 距離左邊 10% */
             gap: 20px;
         }
@@ -413,8 +463,7 @@
             display: flex;
             flex-direction: column;
             overflow: visible;
-            gap: 20px;
-            /* 確保子元素不被裁剪 */
+            gap: 50px;
             opacity: 0;
             transition: opacity 1s ease, transform 1s ease;
             transform: translateY(200px);
@@ -431,7 +480,7 @@
 
         #s2 h1 {
             color: rgb(255, 250, 251);
-            font-size: 25px;
+            font-size: 36px;
             font-optical-sizing: auto;
             font-weight: 550;
             font-style: italic;
@@ -440,20 +489,20 @@
         #h11,
         #h12 {
             text-align: center;
-            line-height: 2.5;
+            line-height: 3;
             /* 行高設定 */
             letter-spacing: 20px;
         }
 
         #h11 {
             position: absolute;
-            left: 25%;
-            bottom: 180px;
+            left: 28%;
+            bottom: 56%;
         }
 
         #h12 {
             position: absolute;
-            left: 32%;
+            left: 35%;
             top: 180px;
         }
 
@@ -467,14 +516,14 @@
 
         #strbox1 {
             position: absolute;
-            left: 20%;
-            bottom: 10%;
+            left: 25%;
+            bottom: 15%;
             transform: translateX(-100px) translateY(-50px);
         }
 
         #strbox2 {
             position: absolute;
-            right: 18%;
+            right: 19%;
             transform: translateX(50px) translateY(100px);
         }
 
@@ -520,7 +569,7 @@
         .marquee-item2 {
             flex-shrink: 0;
             /* 圖片不縮小 */
-            width: 300px;
+            width: 350px;
             height: auto;
             /* 單張圖片寬度 */
             margin-right: 10px;
@@ -567,7 +616,7 @@
         #mainF {
             width: 85vw;
             height: auto;
-            margin-top: 150px;
+            margin-top: 200px;
             /* 每個 section 之間加上 200px 的間距 */
             position: relative;
         }
@@ -644,7 +693,7 @@
             height: 2px;
             background-color: #f2f3f7;
             right: 0;
-            bottom: 19%;
+            bottom: 20%;
         }
 
         /* ---------------- 4-1. 圖片(s6box) ----------------*/
@@ -693,7 +742,7 @@
         main article {
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            width: 500px;
+            width: 600px;
             /* 固定文章區域 */
             height: auto;
             font-size: 10px;
@@ -717,7 +766,8 @@
             /* transform: translateY(50px); */
             z-index: 23;
             padding: 20px 30px;
-            font-size: 20px;
+            font-size: 25px;
+            line-height: 2;
         }
 
         .art1.visible,
@@ -732,29 +782,29 @@
 
         .art1 {
             position: absolute;
-            right: 1%;
-            bottom: 30%;
+            right: 2%;
+            bottom: 22%;
             display: flex;
             text-align: justify;
         }
 
         .art2 {
-            left: 0;
-            bottom: 24%;
+            left: 2%;
+            bottom: 22%;
             display: flex;
             text-align: justify;
         }
 
         .art3 {
-            bottom: 20%;
-            right: 1%;
+            bottom: 16%;
+            right: 2%;
             display: flex;
             text-align: justify;
         }
 
         .art4 {
-            top: 40%;
-            left: 1%;
+            top: 35%;
+            left: 3%;
             display: flex;
             text-align: justify;
         }
@@ -763,8 +813,8 @@
 
         .h3O {
             position: absolute;
-            top: 16%;
-            right: 8%;
+            top: 17%;
+            right: 7%;
         }
 
         .h3S {
@@ -775,7 +825,7 @@
 
         .h3T {
             position: absolute;
-            top: 18%;
+            top: 15%;
             right: 20%;
         }
 
@@ -791,7 +841,7 @@
         .h3F {
             border-radius: 10px;
             color: #f2f3f7;
-            font-size: 45px;
+            font-size: 60px;
             font-family: "Alegreya", serif;
             font-optical-sizing: auto;
             font-weight: 550;
@@ -966,7 +1016,12 @@
         <nav id="nav" class="container">
             <ul id="navbox">
                 <li>
-                    <a href="Photographer.html"> PHOTOGRAPHER</a>
+                    <a href="Home copy 3.html">VESLUNEIR</a>
+                    <hr>
+                    <p>攝影師一覽</p>
+                </li>
+                <li>
+                    <a href="Photographer copy.html">PHOTOGRAPHER</a>
                     <hr>
                     <p>攝影師一覽</p>
                 </li>
@@ -980,13 +1035,20 @@
                     <hr>
                     <p>文章專區</p>
                 </li>
-                <li>
-                    <a href="Login.html">LOGIN</a>
+                <li class="dropdown">
+                    <a href="Login.html" class="arrow_r_b2 dropdown-toggle">LOGIN</a>
                     <hr>
                     <p>註冊／登入</p>
+                    <ul class="dropdown-menu">
+                        <li><a href="Login.html">登入</a></li>
+                        <li><a href="Register.html">註冊</a></li>
+                        <li><a href="ForgotPassword.html">忘記密碼</a></li>
+                        <li><a href="AccountSettings.html">帳戶設定</a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
+
         <section id="btnbox">
             <div class="btn-trigger" id="btn03">
                 <span></span>
@@ -1119,7 +1181,7 @@
                 透過精選的作品與故事，讓觀眾感受到攝影師對光影與瞬間的詩意捕捉，並了解他們的藝術視野與服務特色。
             </article>
 
-            <a href="Photographer.html" id="btn3" class="btn_02">前往攝影師專區</a>
+            <a href="Photographer copy.html" id="btn3" class="btn_02">前往攝影師專區</a>
         </section>
 
 
@@ -1242,6 +1304,25 @@
         btn.addEventListener('click', () => {
             nav.classList.toggle('active');
         });
+
+        //LOGIN下拉選單
+        document.addEventListener("DOMContentLoaded", function () {
+            const dropdownToggle = document.querySelector(".dropdown-toggle");
+            const dropdown = dropdownToggle.parentElement;
+
+            dropdownToggle.addEventListener("click", function (e) {
+                e.preventDefault(); // 防止點擊後跳轉
+                dropdown.classList.toggle("active");
+            });
+
+            // 點擊其他地方時關閉下拉選單
+            document.addEventListener("click", function (e) {
+                if (!dropdown.contains(e.target)) {
+                    dropdown.classList.remove("active");
+                }
+            });
+        });
+
 
 
         //scroll-icon
