--- a/html檔/Photographer copy.html
+++ b/html檔/Photographer copy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>相冊頁面</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,6 @@
 
     <style>
         /* ------------------- 排版元素 ------------------*/
-
         * {
             box-sizing: border-box;
             margin: 0;
@@ -37,16 +36,15 @@
 
         body {
             background-color: rgb(255, 250, 251);
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: stretch;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
+            font-family: "Alegreya", "Kaisei HarunoUmi", serif;
         }
 
-        /* ------------------- header  ------------------*/
+        #box {
+            width: 100px;
+            height: 75px;
+        }
+
+        /* ---------header (輪播+封面+logo+nav)-------------------- */
 
         #s4 {
             display: flex;
@@ -57,27 +55,35 @@
             align-items: center;
             text-align: center;
             /* 垂直置中 */
-            position: relative;
         }
 
         #s4photo img {
-            max-width: auto;
+            max-width: a;
             height: auto;
             /* 保持圖片比例 */
             margin: 0 auto;
             /* 確保水平置中 */
         }
 
+        .container-fluid {
+            position: relative;
+        }
+
+        .d-flex {
+            position: absolute;
+            right: 30px;
+        }
+
         #logobox {
             max-width: 60%;
             position: absolute;
-            left: 20px;
-            top: 20px;
-            z-index: 5;
+            top: 30px;
+            left: 30px;
+            z-index: 3;
         }
 
         #logobox img {
-            max-width: 70%;
+            max-width: 60%;
         }
 
         #nav {
@@ -284,7 +290,8 @@
             margin: auto;
         }
 
-        /* ------------------- 1.文字 ------------------*/
+        /*-------------------- 1. 文字介紹(S2) ----------------*/
+
         #s3 {
             width: 100%;
             display: flex;
@@ -293,7 +300,7 @@
             /* 水平置中 */
             align-items: center;
             /* 垂直置中 */
-            margin: 10px 0 12px 15px;
+            margin: 65px 0 12px 0;
         }
 
 
@@ -307,133 +314,109 @@
         }
 
         #hr1 {
-            width: 100%;
+            width: 80%;
             height: 1px;
             background-color: #c2c4c7;
             display: flex;
             justify-self: center;
         }
 
-        /* ------------------- 2.相冊 ------------------*/
+        /*-------------------- 2. 攝影師專區 ------------------*/
 
-        main {
-            padding-block: 2rem;
-            width: 90%;
-            max-width: 70rem;
-            margin: auto;
-            color: var(--clr-black);
-        }
-
-        .container {
-            margin-top: 2em;
+        .photographer-list {
             display: grid;
-            gap: 1.5rem;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 80px;
+            padding: 20px;
+            justify-items: center;
+            /* 使卡片水平居中 */
+            align-items: center;
+            /* 使卡片垂直居中 */
+            text-align: center;
+            /* 保證文字也是居中 */
+            margin: 60px 150px 25px 150px;
         }
 
-        .card {
-            background: var(--clr-white);
-            border-radius: 1.2rem;
+        .photographer-card {
+            background-color: white;
+            border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            width: 100%;
+            /* 保證卡片寬度是100% (對於自動生成的列會有幫助) */
+            max-width: 350px;
+            min-height: 500px;
+            /* 設定最小高度以保證每個卡片高度一致 */
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
-            align-items: stretch;
+            /* 垂直排列內容 */
+            justify-content: space-between;
+            /* 保證內容均勻分布 */
         }
 
-        .card:hover {
+        .photographer-card:hover {
             transform: translateY(-10px);
+            /* 鼠標懸停效果 */
         }
 
-        .card .imgBox img {
+        .photographer-image {
             width: 100%;
-            height: 100%;
+            height: 300px;
             object-fit: cover;
-            cursor: pointer;
         }
 
-        .imgBox {
-            width: 100%;
-            height: auto;
-        }
-
-        .tag {
-            padding: 0.625rem;
-            background: var(--clr-white);
-            text-align: center;
-            margin-top: 1rem;
-            /* 確保tag有間隔 */
-        }
-
-        .tag a {
-            font-size: 0.8rem;
-            color: var(--clr-black);
-            font-weight: 400;
-            border: 0.125rem solid #c8c8c8;
-            border-radius: 3.125rem;
-            padding: 0.313rem 0.625rem;
-            display: inline-block;
-            cursor: pointer;
-            transition: 0.2s ease-in-out;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            justify-content: center;
+        .photographer-info {
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            /* 垂直排列 h3 和 p */
             align-items: center;
-            z-index: 9999;
-            top: 0;
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.3);
-            /* 半透明背景 */
-        }
-
-        .modal-content {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            max-width: 65%;
-            max-height: 80%;
-            overflow-y: auto;
-            text-align: center;
-            position: relative;
-        }
-
-        .modal-gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            /* 調整每行圖片寬度 */
+            /* 水平居中 h3 和 p */
             gap: 10px;
-            padding: 10px;
+            flex-grow: 1;
+            /* 保證內容區域伸展填充剩餘空間 */
         }
 
-        .modal-gallery img {
+        .photographer-info .buttons {
+            display: flex;
+            /* 按鈕使用flex布局來並排 */
+            gap: 10px;
+            /* 設置按鈕之間的間隔 */
             width: 100%;
-            height: auto;
-            object-fit: cover;
-            max-width: 100%;
-            /* 設定圖片最大寬度 */
-            max-height: auto;
-            /* 設定圖片最大高度 */
+            /* 保證按鈕寬度為100% */
+            justify-content: center;
+            /* 確保按鈕水平方向居中 */
         }
 
-        .modal-gallery img:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-            cursor: pointer;
-        }
-
-        .close {
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            font-size: 24px;
+        .photographer-name {
+            font-size: 1.2rem;
             font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .photographer-specialty {
+            font-size: 1rem;
+            color: #666;
+            margin-bottom: 10px;
+        }
+
+        .view-portfolio-btn {
+            background-color: #ccdacc;
+            color: rgb(65, 61, 61);
+            border: none;
+            padding: 10px;
+            width: 45%;
             cursor: pointer;
+            font-size: 1rem;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            margin-top: 10px;
+            /* 讓按鈕有間距 */
+        }
+
+        .view-portfolio-btn:hover {
+            background-color: #324233;
         }
 
         /* ---------------------- footer --------------------- */
@@ -491,7 +474,7 @@
 </head>
 
 <body>
-    <!-------------------- 1. 頁首 ---------------------->
+    <!--------------------- header ----------------------->
     <header>
         <nav id="nav" class="container">
             <ul id="navbox">
@@ -565,12 +548,12 @@
         <a href="#" class="arrow_r_b"></a>
     </div>
 
-    <!-------------------- 1. 文字介紹 ---------------------->
+    <!---------------- 1. 文字介紹(S2)---------------------->
 
     <main>
 
         <section id="s3">
-            <h1>LookBook</h1>
+            <h1>PHOTOGRAPHERS</h1>
         </section>
 
 
@@ -578,64 +561,115 @@
             <hr>
         </div>
 
-        <!-------------------- 2. 相冊 ---------------------->
 
-        <div class="container">
-            <div class="card" data-album="1">
-                <div class="imgBox">
-                    <img src="https://images.unsplash.com/photo-1598601065215-751bf8798a2c?q=80&w=1883&auto=format&fit=crop"
-                        alt="Awesome views">
-                </div>
-                <div class="tag">
-                    <a href="#">#Awesome views</a>
+
+        <!-- 2. 攝影師專區 -->
+        <section class="photographer-list">
+
+            <div class="photographer-card">
+                <img src="/img/手.jpg" alt="攝影師2" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">Peter LU</h3>
+                    <p class="photographer-specialty">歲月靜好，現世安穩</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
                 </div>
             </div>
 
-            <div class="card" data-album="2">
-                <div class="imgBox">
-                    <img src="https://images.unsplash.com/photo-1598601065215-751bf8798a2c?q=80&w=1883&auto=format&fit=crop"
-                        alt="Awesome views">
-                </div>
-                <div class="tag">
-                    <a href="#">#Awesome views</a>
+            <div class="photographer-card">
+                <img src="/img/photo3_sophia/so1.JPG" alt="攝影師2" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">Sylvia</h3>
+                    <p class="photographer-specialty">來世我要變有錢人的貓</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
                 </div>
             </div>
 
-            <div class="card" data-album="3">
-                <div class="imgBox">
-                    <img src="https://images.unsplash.com/photo-1501554728187-ce583db33af7?q=80&w=1887&auto=format&fit=crop"
-                        alt="Hiking">
-                </div>
-                <div class="tag">
-                    <a href="#">#Hiking</a>
+            <div class="photographer-card">
+                <img src="/img/photo1_lily/lili1.jpg" alt="攝影師2" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">Sherlock</h3>
+                    <p class="photographer-specialty">無法抵抗毛絨絨患者</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <div class="photographer-card">
+                <img id="yu" src="/img/photp2_yu/yu7.jpg" alt="攝影師1" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">悠人</h3>
+                    <p class="photographer-specialty">枯藤 老樹 昏鴨<br>
+                        7-11 OK 全家</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="photographer-card">
+                <img src="/img/photp2_yu/yu4.jpg" alt="攝影師2" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">Terick_2000</h3>
+                    <p class="photographer-specialty">好宅好快樂</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="photographer-card">
+                <img src="/img/catbook.jpg" alt="攝影師2" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">ゆき</h3>
+                    <p class="photographer-specialty">Love Yourself</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="photographer-card">
+                <img src="/img/photer2.jpg" alt="攝影師2" class="photographer-image">
+                <div class="photographer-info">
+                    <h3 class="photographer-name">Mick</h3>
+                    <p class="photographer-specialty">.</p>
+                    <div class="buttons">
+                        <button class="view-portfolio-btn">About</button>
+                        <button class="view-portfolio-btn">View</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--------------------- 5. 頁尾(footer) --------------------->
+
+        <footer id="footer">
+            <div class="footer-section2">
+                <ul class="footer-social">
+                    <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    </li>
+                    <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#contact"><i class="fa-regular fa-comment"></i></a></li>
+                </ul>
+            </div>
+        </footer>
+
     </main>
 
-    <!-- 彈出框 -->
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span id="closeModal" class="close">&times;</span>
-            <div id="modalGallery" class="modal-gallery"></div>
-        </div>
-    </div>
 
 
-    <!--------------------- 5. 頁尾(footer) --------------------->
-
-    <footer id="footer">
-        <div class="footer-section2">
-            <ul class="footer-social">
-                <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-                </li>
-                <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#contact"><i class="fa-regular fa-comment"></i></a></li>
-            </ul>
-        </div>
-    </footer>
-
-
+    <!-- 引入 Bootstrap JS (放在 body 結束前) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/1bf13e43a0.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/1bf13e43a0.js" crossorigin="anonymous"></script>
@@ -649,9 +683,8 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
     <script>
+
         // ---------- 1. btn漢堡轉X
         $(function () {
             $('.btn-trigger').on('click', function () {
@@ -686,63 +719,9 @@
             });
         });
 
-        //相冊
-        const albumImages = {
-            1: ["/img/Lemon.jpg", "/img/book&camera.jpg", "/img/redhouse.jpg", "/img/girl.jpg", "/img/Paul's.jpg"],
-            2: ["/img/Lemon.jpg", "/img/book&camera.jpg", "/img/Lemon.jpg", "/img/tower2.jpeg", "/img/searock.jpg"],
-            3: ["/img/redhouse.jpg", "/img/book&camera.jpg", "/img/redhouse.jpg", "/img/goldenhair.jpg", "/img/sketch.jpg"]
-        };
+        // 篩選器
 
-        const cards = document.querySelectorAll(".card");
-        const modal = document.getElementById("modal");
-        const modalGallery = document.getElementById("modalGallery");
-        const closeModal = document.getElementById("closeModal");
 
-        function adjustImageSizes() {
-            const images = document.querySelectorAll(".modal-gallery img");
-
-            modalGallery.style.display = "grid";
-            modalGallery.style.gridTemplateColumns = "repeat(auto-fill, minmax(200px, 1fr))";
-            modalGallery.style.gridAutoRows = "auto";
-            modalGallery.style.gap = "10px";
-
-            images.forEach((img) => {
-                img.onload = () => {
-                    const rowSpan = Math.ceil(img.naturalHeight / 350); // 使用圖片的高度來調整每行跨度
-                    img.style.gridRowEnd = `span ${rowSpan}`;
-                };
-            });
-        }
-
-        cards.forEach(card => {
-            card.addEventListener("click", () => {
-                const albumId = card.getAttribute("data-album");
-                const images = albumImages[albumId];
-
-                modalGallery.innerHTML = "";
-
-                images.forEach(src => {
-                    const img = document.createElement("img");
-                    img.src = src;
-                    img.alt = "相片";
-                    modalGallery.appendChild(img);
-                });
-
-                adjustImageSizes();
-
-                modal.style.display = "flex";
-            });
-        });
-
-        closeModal.addEventListener("click", () => {
-            modal.style.display = "none";
-        });
-
-        window.addEventListener("click", (event) => {
-            if (event.target === modal) {
-                modal.style.display = "none";
-            }
-        });
     </script>
 </body>
 
